--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vizzy",
+  "name": "miti",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.96.0",
-    "@react-three/fiber": "^8.15.0",
-    "clsx": "^2.1.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.300.0",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^14.2.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-grid-layout": "^2.2.2",
-    "tailwindcss": "^3.4.0",
-    "three": "^0.160.0",
-    "urdf-loader": "^0.12.0",
-    "zustand": "^4.5.0"
+    "tailwindcss": "^3.4.19",
+    "three": "^0.160.1",
+    "urdf-loader": "^0.12.6",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.19.29",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@types/react-grid-layout": "^1.3.6",
     "@types/three": "^0.160.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
-    "postcss": "^8",
-    "typescript": "^5"
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3"
   }
 }
