--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
       - 'v*.*.*'
 
 jobs:
-  release:
-    name: Create Release
+  build-and-release:
+    name: Build and Create Release
     runs-on: ubuntu-latest
     
     steps:
@@ -29,25 +29,156 @@ jobs:
         env:
           NEXT_PUBLIC_ROSBRIDGE_URL: ws://localhost:9090
       
-      - name: Generate changelog
+      - name: Create Standalone Package
+        run: |
+          echo "📦 Creating standalone deployment package..."
+          mkdir -p deploy/miti
+          cp -r .next/standalone/* deploy/miti/
+          mkdir -p deploy/miti/.next/static
+          cp -r .next/static/* deploy/miti/.next/static/
+          mkdir -p deploy/miti/public
+          cp -r public/* deploy/miti/public/
+          
+          # Copy deployment scripts
+          cp ubuntu-setup.sh deploy/
+          cp deploy.sh deploy/ || true
+          
+          # Create README for release
+          cat > deploy/README.md << 'EOF'
+          # MITI Release Package
+          
+          ## Quick Start (Ubuntu/Linux)
+          
+          1. Extract this package
+          2. Run the setup script:
+             ```bash
+             chmod +x ubuntu-setup.sh
+             ./ubuntu-setup.sh
+             ```
+          3. Access MITI at http://localhost:3000
+          
+          ## Manual Installation
+          
+          ### Requirements
+          - Bun or Node.js 18+
+          - ROS2 with rosbridge_server
+          
+          ### Run
+          ```bash
+          cd miti
+          PORT=3000 HOSTNAME=0.0.0.0 bun server.js
+          # or with Node.js:
+          PORT=3000 HOSTNAME=0.0.0.0 node server.js
+          ```
+          
+          ## Configuration
+          
+          Set environment variable:
+          ```bash
+          export NEXT_PUBLIC_ROSBRIDGE_URL=ws://your-robot-ip:9090
+          ```
+          
+          ## More Info
+          https://github.com/hiran-t/MITI
+          EOF
+          
+          # Create tar.gz
+          cd deploy
+          tar -czf ../miti-standalone-${{ github.ref_name }}.tar.gz .
+          cd ..
+          
+          echo "✅ Standalone package created"
+          ls -lh miti-standalone-*.tar.gz
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker Image and Export
+        run: |
+          echo "🐳 Building Docker image..."
+          docker build -t miti:${{ github.ref_name }} .
+          
+          # Save as tar for release
+          docker save miti:${{ github.ref_name }} | gzip > miti-docker-${{ github.ref_name }}.tar.gz
+          
+          echo "✅ Docker image created"
+          ls -lh miti-docker-*.tar.gz
+      
+      - name: Generate Release Notes
         id: changelog
         run: |
-          echo "## What's Changed" > RELEASE_NOTES.md
-          git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"* %s (%h)" >> RELEASE_NOTES.md
+          cat > RELEASE_NOTES.md << 'EOF'
+          ## 🚀 MITI ${{ github.ref_name }}
+          
+          ### 📦 Download Options
+          
+          Choose the package that fits your needs:
+          
+          #### 1. Docker Image (Recommended) 
+          - **File**: `miti-docker-${{ github.ref_name }}.tar.gz`
+          - **Size**: ~500 MB
+          - **Best for**: Easy deployment, isolated environment
+          - **Usage**:
+            ```bash
+            # Load image
+            docker load < miti-docker-${{ github.ref_name }}.tar.gz
+            
+            # Run container
+            docker run -d -p 3000:3000 \
+              -e NEXT_PUBLIC_ROSBRIDGE_URL=ws://localhost:9090 \
+              --name miti miti:${{ github.ref_name }}
+            ```
+          
+          #### 2. Standalone Build
+          - **File**: `miti-standalone-${{ github.ref_name }}.tar.gz`
+          - **Size**: ~100 MB
+          - **Best for**: Direct deployment without Docker
+          - **Usage**:
+            ```bash
+            # Extract
+            tar -xzf miti-standalone-${{ github.ref_name }}.tar.gz
+            
+            # Run setup script
+            chmod +x ubuntu-setup.sh
+            ./ubuntu-setup.sh
+            ```
+          
+          ### 📝 What's Changed
+          
+          EOF
+          
+          # Add commit logs
+          if git describe --tags --abbrev=0 HEAD^ 2>/dev/null; then
+            git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"* %s (%h)" >> RELEASE_NOTES.md
+          else
+            git log --pretty=format:"* %s (%h)" >> RELEASE_NOTES.md
+          fi
+          
+          cat >> RELEASE_NOTES.md << 'EOF'
+          
+          ### 🔗 Links
+          - [Documentation](https://github.com/hiran-t/MITI/blob/main/README.md)
+          - [API Reference](https://github.com/hiran-t/MITI/blob/main/docs/API.md)
+          - [Deployment Guide](https://github.com/hiran-t/MITI/blob/main/docs/DEPLOYMENT.md)
+          EOF
       
-      - name: Create Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           body_path: RELEASE_NOTES.md
           draft: false
           prerelease: false
+          files: |
+            miti-standalone-${{ github.ref_name }}.tar.gz
+            miti-docker-${{ github.ref_name }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
-  docker:
-    name: Build and Push Docker Image
+  docker-hub:
+    name: Push to Docker Hub (Optional)
     runs-on: ubuntu-latest
-    needs: release
+    needs: build-and-release
+    if: false  # Set to true and configure secrets to enable
     
     steps:
       - name: Checkout code
