fix: make standalone build conditional to fix CI/CD
- Change output: 'standalone' to be conditional
- Only enable for release builds with STANDALONE_BUILD env
- Update Dockerfile and release workflow
- Fix build failures in CI/CD

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
         run: bun run build
         env:
           NEXT_PUBLIC_ROSBRIDGE_URL: ws://localhost:9090
+          STANDALONE_BUILD: true
       
       - name: Create Standalone Package
         run: |
