refactor: organize scripts and systemd service
- Create scripts/ directory for deployment scripts
- Move deploy.sh and ubuntu-setup.sh to scripts/
- Add scripts/auto-startapp.service template
- Update ubuntu-setup.sh to use service template
- Update release workflow to copy scripts correctly
- Update .dockerignore to exclude scripts/ directory

--- a/.dockerignore
+++ b/.dockerignore
@@ -72,9 +72,10 @@ docs/
 # CI/CD
 .github/
 
-# Scripts
-deploy.sh
-ubuntu-setup.sh
+# Scripts (deployment only, not needed in Docker)
+scripts/
+
+# Deploy directory
 deploy/
 
 # Husky
